src/qt/libqjsonobject.bf

using System;
using System.Interop;
namespace Qt;

public class QJsonObject
{
	protected void* nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QJsonObject_new();
	}
	
	public ~this()
	{
		CQt.QJsonObject_Delete(this.nativePtr);
	}
	
	public void OperatorAssign(void* other)
	{
		CQt.QJsonObject_OperatorAssign(this.nativePtr, other);
	}
	
	public void Swap(void* other)
	{
		CQt.QJsonObject_Swap(this.nativePtr, other);
	}
	
	public static void FromVariantMap(void* mapVal)
	{
		CQt.QJsonObject_FromVariantMap(mapVal);
	}
	
	public void* ToVariantMap()
	{
		return CQt.QJsonObject_ToVariantMap(this.nativePtr);
	}
	
	public static void FromVariantHash(void* mapVal)
	{
		CQt.QJsonObject_FromVariantHash(mapVal);
	}
	
	public void* ToVariantHash()
	{
		return CQt.QJsonObject_ToVariantHash(this.nativePtr);
	}
	
	public libqt_string[] Keys()
	{
		return CQt.QJsonObject_Keys(this.nativePtr);
	}
	
	public int32 Size()
	{
		return CQt.QJsonObject_Size(this.nativePtr);
	}
	
	public int32 Count()
	{
		return CQt.QJsonObject_Count(this.nativePtr);
	}
	
	public int32 Length()
	{
		return CQt.QJsonObject_Length(this.nativePtr);
	}
	
	public bool IsEmpty()
	{
		return CQt.QJsonObject_IsEmpty(this.nativePtr);
	}
	
	public void Value(libqt_string key)
	{
		CQt.QJsonObject_Value(this.nativePtr, key);
	}
	
	public void OperatorSubscript(libqt_string key)
	{
		CQt.QJsonObject_OperatorSubscript(this.nativePtr, key);
	}
	
	public void OperatorSubscriptWithKey(libqt_string key)
	{
		CQt.QJsonObject_OperatorSubscriptWithKey(this.nativePtr, key);
	}
	
	public void Remove(libqt_string key)
	{
		CQt.QJsonObject_Remove(this.nativePtr, key);
	}
	
	public void Take(libqt_string key)
	{
		CQt.QJsonObject_Take(this.nativePtr, key);
	}
	
	public bool Contains(libqt_string key)
	{
		return CQt.QJsonObject_Contains(this.nativePtr, key);
	}
	
	public bool OperatorEqual(void* other)
	{
		return CQt.QJsonObject_OperatorEqual(this.nativePtr, other);
	}
	
	public bool OperatorNotEqual(void* other)
	{
		return CQt.QJsonObject_OperatorNotEqual(this.nativePtr, other);
	}
	
	public QJsonObject__iterator Begin()
	{
		return CQt.QJsonObject_Begin(this.nativePtr);
	}
	
	public QJsonObject__const_iterator Begin2()
	{
		return CQt.QJsonObject_Begin2(this.nativePtr);
	}
	
	public QJsonObject__const_iterator ConstBegin()
	{
		return CQt.QJsonObject_ConstBegin(this.nativePtr);
	}
	
	public QJsonObject__iterator End()
	{
		return CQt.QJsonObject_End(this.nativePtr);
	}
	
	public QJsonObject__const_iterator End2()
	{
		return CQt.QJsonObject_End2(this.nativePtr);
	}
	
	public QJsonObject__const_iterator ConstEnd()
	{
		return CQt.QJsonObject_ConstEnd(this.nativePtr);
	}
	
	public QJsonObject__iterator Erase(QJsonObject__iterator it)
	{
		return CQt.QJsonObject_Erase(this.nativePtr, it);
	}
	
	public QJsonObject__iterator Find(libqt_string key)
	{
		return CQt.QJsonObject_Find(this.nativePtr, key);
	}
	
	public QJsonObject__const_iterator FindWithKey(libqt_string key)
	{
		return CQt.QJsonObject_FindWithKey(this.nativePtr, key);
	}
	
	public QJsonObject__const_iterator ConstFind(libqt_string key)
	{
		return CQt.QJsonObject_ConstFind(this.nativePtr, key);
	}
	
	public QJsonObject__iterator Insert(libqt_string key, void* value)
	{
		return CQt.QJsonObject_Insert(this.nativePtr, key, value);
	}
	
	public bool Empty()
	{
		return CQt.QJsonObject_Empty(this.nativePtr);
	}
	
}
extension CQt
{
	[LinkName("QJsonObject_new")]
	public static extern void* QJsonObject_new();
	[LinkName("QJsonObject_new2")]
	public static extern void* QJsonObject_new2(void* other);
	[LinkName("QJsonObject_OperatorAssign")]
	public static extern void QJsonObject_OperatorAssign(void* c_this, void* other);
	[LinkName("QJsonObject_Swap")]
	public static extern void QJsonObject_Swap(void* c_this, void* other);
	[LinkName("QJsonObject_FromVariantMap")]
	public static extern void QJsonObject_FromVariantMap(void* mapVal);
	[LinkName("QJsonObject_ToVariantMap")]
	public static extern void* QJsonObject_ToVariantMap(void* c_this);
	[LinkName("QJsonObject_FromVariantHash")]
	public static extern void QJsonObject_FromVariantHash(void* mapVal);
	[LinkName("QJsonObject_ToVariantHash")]
	public static extern void* QJsonObject_ToVariantHash(void* c_this);
	[LinkName("QJsonObject_Keys")]
	public static extern libqt_string[] QJsonObject_Keys(void* c_this);
	[LinkName("QJsonObject_Size")]
	public static extern int32 QJsonObject_Size(void* c_this);
	[LinkName("QJsonObject_Count")]
	public static extern int32 QJsonObject_Count(void* c_this);
	[LinkName("QJsonObject_Length")]
	public static extern int32 QJsonObject_Length(void* c_this);
	[LinkName("QJsonObject_IsEmpty")]
	public static extern bool QJsonObject_IsEmpty(void* c_this);
	[LinkName("QJsonObject_Value")]
	public static extern void QJsonObject_Value(void* c_this, libqt_string key);
	[LinkName("QJsonObject_OperatorSubscript")]
	public static extern void QJsonObject_OperatorSubscript(void* c_this, libqt_string key);
	[LinkName("QJsonObject_OperatorSubscriptWithKey")]
	public static extern void QJsonObject_OperatorSubscriptWithKey(void* c_this, libqt_string key);
	[LinkName("QJsonObject_Remove")]
	public static extern void QJsonObject_Remove(void* c_this, libqt_string key);
	[LinkName("QJsonObject_Take")]
	public static extern void QJsonObject_Take(void* c_this, libqt_string key);
	[LinkName("QJsonObject_Contains")]
	public static extern bool QJsonObject_Contains(void* c_this, libqt_string key);
	[LinkName("QJsonObject_OperatorEqual")]
	public static extern bool QJsonObject_OperatorEqual(void* c_this, void* other);
	[LinkName("QJsonObject_OperatorNotEqual")]
	public static extern bool QJsonObject_OperatorNotEqual(void* c_this, void* other);
	[LinkName("QJsonObject_Begin")]
	public static extern QJsonObject__iterator QJsonObject_Begin(void* c_this);
	[LinkName("QJsonObject_Begin2")]
	public static extern QJsonObject__const_iterator QJsonObject_Begin2(void* c_this);
	[LinkName("QJsonObject_ConstBegin")]
	public static extern QJsonObject__const_iterator QJsonObject_ConstBegin(void* c_this);
	[LinkName("QJsonObject_End")]
	public static extern QJsonObject__iterator QJsonObject_End(void* c_this);
	[LinkName("QJsonObject_End2")]
	public static extern QJsonObject__const_iterator QJsonObject_End2(void* c_this);
	[LinkName("QJsonObject_ConstEnd")]
	public static extern QJsonObject__const_iterator QJsonObject_ConstEnd(void* c_this);
	[LinkName("QJsonObject_Erase")]
	public static extern QJsonObject__iterator QJsonObject_Erase(void* c_this, QJsonObject__iterator it);
	[LinkName("QJsonObject_Find")]
	public static extern QJsonObject__iterator QJsonObject_Find(void* c_this, libqt_string key);
	[LinkName("QJsonObject_FindWithKey")]
	public static extern QJsonObject__const_iterator QJsonObject_FindWithKey(void* c_this, libqt_string key);
	[LinkName("QJsonObject_ConstFind")]
	public static extern QJsonObject__const_iterator QJsonObject_ConstFind(void* c_this, libqt_string key);
	[LinkName("QJsonObject_Insert")]
	public static extern QJsonObject__iterator QJsonObject_Insert(void* c_this, libqt_string key, void* value);
	[LinkName("QJsonObject_Empty")]
	public static extern bool QJsonObject_Empty(void* c_this);
	/// Delete this object from C++ memory
	[LinkName("QJsonObject_Delete")]
	public static extern void QJsonObject_Delete(void* self);
}
public class QJsonObject__iterator
{
	protected void* nativePtr;
	
	public this(QJsonObject__iterator* other)
	{
		this.nativePtr = CQt.QJsonObject__iterator_new(other);
	}
	
	public ~this()
	{
		CQt.QJsonObject__iterator_Delete(this.nativePtr);
	}
	
	public void OperatorAssign(QJsonObject__iterator* other)
	{
		CQt.QJsonObject__iterator_OperatorAssign(this.nativePtr, other);
	}
	
	public libqt_string Key()
	{
		return CQt.QJsonObject__iterator_Key(this.nativePtr);
	}
	
	public void Value()
	{
		CQt.QJsonObject__iterator_Value(this.nativePtr);
	}
	
	public void OperatorMultiply()
	{
		CQt.QJsonObject__iterator_OperatorMultiply(this.nativePtr);
	}
	
	public void* OperatorMinusGreater()
	{
		return CQt.QJsonObject__iterator_OperatorMinusGreater(this.nativePtr);
	}
	
	public void* OperatorMinusGreater2()
	{
		return CQt.QJsonObject__iterator_OperatorMinusGreater2(this.nativePtr);
	}
	
	public void OperatorSubscript(int32 j)
	{
		CQt.QJsonObject__iterator_OperatorSubscript(this.nativePtr, j);
	}
	
	public bool OperatorEqual(QJsonObject__iterator* other)
	{
		return CQt.QJsonObject__iterator_OperatorEqual(this.nativePtr, other);
	}
	
	public bool OperatorNotEqual(QJsonObject__iterator* other)
	{
		return CQt.QJsonObject__iterator_OperatorNotEqual(this.nativePtr, other);
	}
	
	public bool OperatorLesser(QJsonObject__iterator* other)
	{
		return CQt.QJsonObject__iterator_OperatorLesser(this.nativePtr, other);
	}
	
	public bool OperatorLesserOrEqual(QJsonObject__iterator* other)
	{
		return CQt.QJsonObject__iterator_OperatorLesserOrEqual(this.nativePtr, other);
	}
	
	public bool OperatorGreater(QJsonObject__iterator* other)
	{
		return CQt.QJsonObject__iterator_OperatorGreater(this.nativePtr, other);
	}
	
	public bool OperatorGreaterOrEqual(QJsonObject__iterator* other)
	{
		return CQt.QJsonObject__iterator_OperatorGreaterOrEqual(this.nativePtr, other);
	}
	
	public QJsonObject__iterator* OperatorPlusPlus()
	{
		return CQt.QJsonObject__iterator_OperatorPlusPlus(this.nativePtr);
	}
	
	public QJsonObject__iterator OperatorPlusPlusWithInt(int32 param1)
	{
		return CQt.QJsonObject__iterator_OperatorPlusPlusWithInt(this.nativePtr, param1);
	}
	
	public QJsonObject__iterator* OperatorMinusMinus()
	{
		return CQt.QJsonObject__iterator_OperatorMinusMinus(this.nativePtr);
	}
	
	public QJsonObject__iterator OperatorMinusMinusWithInt(int32 param1)
	{
		return CQt.QJsonObject__iterator_OperatorMinusMinusWithInt(this.nativePtr, param1);
	}
	
	public QJsonObject__iterator OperatorPlus(int32 j)
	{
		return CQt.QJsonObject__iterator_OperatorPlus(this.nativePtr, j);
	}
	
	public QJsonObject__iterator OperatorMinus(int32 j)
	{
		return CQt.QJsonObject__iterator_OperatorMinus(this.nativePtr, j);
	}
	
	public QJsonObject__iterator* OperatorPlusAssign(int32 j)
	{
		return CQt.QJsonObject__iterator_OperatorPlusAssign(this.nativePtr, j);
	}
	
	public QJsonObject__iterator* OperatorMinusAssign(int32 j)
	{
		return CQt.QJsonObject__iterator_OperatorMinusAssign(this.nativePtr, j);
	}
	
	public int32 OperatorMinusWithQJsonObjectiterator(QJsonObject__iterator j)
	{
		return CQt.QJsonObject__iterator_OperatorMinusWithQJsonObjectiterator(this.nativePtr, j);
	}
	
	public bool OperatorEqualWithOther(QJsonObject__const_iterator* other)
	{
		return CQt.QJsonObject__iterator_OperatorEqualWithOther(this.nativePtr, other);
	}
	
	public bool OperatorNotEqualWithOther(QJsonObject__const_iterator* other)
	{
		return CQt.QJsonObject__iterator_OperatorNotEqualWithOther(this.nativePtr, other);
	}
	
	public bool OperatorLesserWithOther(QJsonObject__const_iterator* other)
	{
		return CQt.QJsonObject__iterator_OperatorLesserWithOther(this.nativePtr, other);
	}
	
	public bool OperatorLesserOrEqualWithOther(QJsonObject__const_iterator* other)
	{
		return CQt.QJsonObject__iterator_OperatorLesserOrEqualWithOther(this.nativePtr, other);
	}
	
	public bool OperatorGreaterWithOther(QJsonObject__const_iterator* other)
	{
		return CQt.QJsonObject__iterator_OperatorGreaterWithOther(this.nativePtr, other);
	}
	
	public bool OperatorGreaterOrEqualWithOther(QJsonObject__const_iterator* other)
	{
		return CQt.QJsonObject__iterator_OperatorGreaterOrEqualWithOther(this.nativePtr, other);
	}
	
}
